--- a/readme
+++ b/readme
@@ -1,5 +1,4 @@
 This is the project done for the assignment of Enterprise Information Systems
 
-<div align="center">
-  <a href="https://youtu.be/GnBbPLvQpLs"><img src="https://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg" alt="IMAGE ALT TEXT"></a>
-</div>
+Video Demo:
+[![Alt text](https://img.youtube.com/vi/VID/0.jpg)](https://youtu.be/GnBbPLvQpLs)
