--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
 This is the project done for the assignment of Enterprise Information Systems
 
 Video Demo:
+[![Kerberos and LDAP (Configured with SSSD Daemon)](https://img.youtube.com/vi/GnBbPLvQpLs/0.jpg)]
+(https://www.youtube.com/watch?v=GnBbPLvQpLs "Everything Is AWESOME")
