--- a/readme
+++ b/readme
@@ -1,5 +1,7 @@
 This is the project done for the assignment of Enterprise Information Systems
 
+![alt text](https://raw.githubusercontent.com/username/projectname/branch/path/to/img.png)
+
 Video Demo:
 [![Kerberos and LDAP (Configured with SSSD Daemon)](https://img.youtube.com/vi/GnBbPLvQpLs/0.jpg)]
 (https://www.youtube.com/watch?v=GnBbPLvQpLs "Everything Is AWESOME")
