--- a/readme
+++ b/readme
@@ -1,5 +1,7 @@
 This is the project done for the assignment of Enterprise Information Systems
 
+![capture](https://user-images.githubusercontent.com/38833701/43997563-9ebcb644-9dd6-11e8-8944-b7755b1569d6.PNG)
+
 
 Video Demo:
 ![Screenshot](Capture.png)
